test/regression/convert/testdata/expected-manifests/webhook-operator.v0.0.5/all-webhook-types/03_clusterrolebinding_webhook-operator.v-1zfvwth88plw3th2midra1jqduroo1q7omiagjujsiu3.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: webhook-operator.v-1zfvwth88plw3th2midra1jqduroo1q7omiagjujsiu3
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: webhook-operator.v-1zfvwth88plw3th2midra1jqduroo1q7omiagjujsiu3
subjects:
- kind: ServiceAccount
  name: webhook-operator-controller-manager
  namespace: webhook-system
