test/regression/convert/testdata/expected-manifests/webhook-operator.v0.0.5/all-webhook-types/06_mutatingwebhookconfiguration_mwebhooktest-v1.kb.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mwebhooktest-v1.kb.io
  namespace: webhook-system
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-operator-controller-manager-service
      namespace: webhook-system
      path: /mutate-webhook-operators-coreos-io-v1-webhooktest
      port: 443
  failurePolicy: Fail
  name: mwebhooktest-v1.kb.io
  rules:
  - apiGroups:
    - webhook.operators.coreos.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - webhooktests
  sideEffects: None
