test/regression/convert/testdata/expected-manifests/webhook-operator.v0.0.5/all-webhook-types/07_service_webhook-operator-controller-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-operator-controller-manager-service
  namespace: webhook-system
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/name: webhook-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
