test/regression/convert/testdata/expected-manifests/webhook-operator.v0.0.5/all-webhook-types/08_serviceaccount_webhook-operator-controller-manager.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: webhook-operator-controller-manager
  namespace: webhook-system
